Finishing up flow boxcarring work for @solo-1234 - fixes bug where filtering on parent-level fields with multiple rollups configured could lead to a no-op rollup being configured IF the reason the rollup was being run was due to the old record matching and the new one no longer matching

--- a/extra-tests/classes/RollupCalcItemReplacerTests.cls
+++ b/extra-tests/classes/RollupCalcItemReplacerTests.cls
@@ -8,7 +8,7 @@ private class RollupCalcItemReplacerTests {
   @IsTest
   static void shouldNotTryToQueryRelationshipFieldsWhenTheyAlreadyExistOnPassedInRecords() {
     Rollup.defaultControl = new RollupControl__mdt(ShouldAbortRun__c = true);
-    Account acc = [SELECT Id FROM Account];
+    Account acc = [SELECT Id, Name FROM Account];
 
     Contact con = new Contact(LastName = 'Lookup to Account', AccountId = acc.Id);
     insert con;
@@ -30,7 +30,7 @@ private class RollupCalcItemReplacerTests {
   @IsTest
   static void shouldSafelyRequeryRelationshipFields() {
     Rollup.defaultControl = new RollupControl__mdt(ShouldAbortRun__c = true);
-    Account acc = [SELECT Id FROM Account];
+    Account acc = [SELECT Id, Name FROM Account];
 
     Contact con = new Contact(LastName = 'Lookup to Account', AccountId = acc.Id);
     insert con;
