Fixes #237 by ensuring ultimate parent rollups don't run endlessly and properly abort at the top-level parents after calculating rollups - also ensures full recalc feature works for hierarchical parents

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -1478,6 +1478,7 @@ global without sharing virtual class Rollup {
       }
       if (rollupMetadata != null) {
         cachedMetadata.addAll(rollupMetadata);
+        rollupMetadata = null;
       }
       matchingMetadata = cachedMetadata.clone();
     } else if (metadataType == RollupControl__mdt.SObjectType) {
