Continued work on #228 with a huge amount of help from @jongpie and @nojanv - got first unit tests passing related to multiple fields being sorted for FIRST/LAST rollups, including properly handling null sort order. Still TODO - dealing with ascending/descending sort order on fields that are not null

--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -687,6 +687,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     return localLookupItems;
   }
 
+  // TODO - move this into RollupSObjectUpdater
   private void splitUpdates(Map<String, SObject> updatedLookupRecords) {
     if (this.rollupControl.MaxParentRowsUpdatedAtOnce__c < updatedLookupRecords.size() && Limits.getLimitQueueableJobs() > Limits.getQueueableJobs()) {
       Integer maxIndexToRemove = updatedLookupRecords.size() / 2;
