Added sort order descending logic

--- a/extra-tests/classes/RollupFirstLastSorterTests.cls
+++ b/extra-tests/classes/RollupFirstLastSorterTests.cls
@@ -1,7 +1,7 @@
 @IsTest
 private class RollupFirstLastSorterTests {
   @IsTest
-  static void shouldOrderByMultipleFields() {
+  static void shouldOrderByTwoFields() {
     RollupFirstLastSorter sorter = new RollupFirstLastSorter(
       Rollup.Op.FIRST,
       new List<RollupOrderBy__mdt>{
@@ -18,13 +18,38 @@ private class RollupFirstLastSorterTests {
       // this record should essentially be thrown out of sorting since it "loses" on the first ordering,
       // which is on Amount
       new Opportunity(Amount = 3, CloseDate = severalDaysAgo.addDays(-1)),
-      expectedFirstItem,
-      expectedSecondItem
+      expectedSecondItem,
+      expectedFirstItem
     };
     sorter.sort(oppsToSort);
 
     System.assertEquals(expectedFirstItem, oppsToSort[0]);
     System.assertEquals(expectedSecondItem, oppsToSort[1]);
+  }
+
+  @IsTest
+  static void shouldOrderByMultipleFields() {
+    RollupFirstLastSorter sorter = new RollupFirstLastSorter(
+      Rollup.Op.FIRST,
+      new List<RollupOrderBy__mdt>{
+        new RollupOrderBy__mdt(Ranking__c = 0, FieldName__c = 'Amount'),
+        new RollupOrderBy__mdt(Ranking__c = 1, FieldName__c = 'CloseDate'),
+        new RollupOrderBy__mdt(Ranking__c = 2, FieldName__c = 'Name')
+      }
+    );
+
+    Date today = System.today().addDays(-2);
+    Opportunity expectedFirstItem = new Opportunity(Amount = 1, CloseDate = today, Name = 'b');
+    Opportunity expectedThirdItem = new Opportunity(Amount = 2, CloseDate = today, Name = 'a');
+    Opportunity expectedSecondItem = new Opportunity(Amount = 1, CloseDate = today, Name = 'c');
+    Opportunity expectedFourthItem = new Opportunity(Amount = 2, CloseDate = today.addDays(1), Name = 'a');
+    List<Opportunity> oppsToSort = new List<Opportunity>{ expectedSecondItem, expectedFourthItem, expectedThirdItem, expectedFirstItem };
+    sorter.sort(oppsToSort);
+
+    System.assertEquals(expectedFirstItem, oppsToSort[0]);
+    System.assertEquals(expectedSecondItem, oppsToSort[1]);
+    System.assertEquals(expectedThirdItem, oppsToSort[2]);
+    System.assertEquals(expectedFourthItem, oppsToSort[3]);
   }
 
   @IsTest
@@ -49,5 +74,29 @@ private class RollupFirstLastSorterTests {
 
     System.assertEquals(expectedFirstItem, oppsToSort[0]);
     System.assertEquals(expectedSecondItem, oppsToSort[1]);
+  }
+
+  @IsTest
+  static void shouldOrderDescWhenStipulated() {
+    RollupFirstLastSorter sorter = new RollupFirstLastSorter(
+      Rollup.Op.FIRST,
+      new List<RollupOrderBy__mdt>{
+        new RollupOrderBy__mdt(Ranking__c = 0, FieldName__c = 'Amount', SortOrder__c = RollupMetaPicklists.SortOrder.Descending),
+        new RollupOrderBy__mdt(Ranking__c = 1, FieldName__c = 'CloseDate')
+      }
+    );
+
+    Date today = System.today();
+    // validates null sort order plays nice with this
+    Opportunity expectedFirstItem = new Opportunity(Amount = null, CloseDate = today);
+    Opportunity expectedSecondItem = new Opportunity(Amount = 5, CloseDate = today);
+    Opportunity expectedThirdItem = new Opportunity(Amount = 1, CloseDate = today);
+
+    List<Opportunity> oppsToSort = new List<Opportunity>{ expectedThirdItem, expectedFirstItem, expectedSecondItem };
+    sorter.sort(oppsToSort);
+
+    System.assertEquals(expectedFirstItem, oppsToSort[0]);
+    System.assertEquals(expectedSecondItem, oppsToSort[1]);
+    System.assertEquals(expectedThirdItem, oppsToSort[2]);
   }
 }
